View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0027836 | Open CASCADE | OCCT:Visualization | public | 2016-09-03 21:04 | 2016-12-09 16:39 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | trivial | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.1.0 | ||||
Target Version | 7.1.0 | Fixed in Version | 7.1.0 | ||
Summary | 0027836: Visualization, TKOpenGl - gradient background is lost at some camera positions | ||||
Description | Gradient background is lost at some camera positions. | ||||
Steps To Reproduce | pload MODELING VISUALIZATION box b 0 0 -100 100 90 10 vclear vinit View1 vaxo vsetgradientbg 180 200 255 180 180 180 2 vzbufftrihedron vdisplay -dispMode 1 b vsetlocation b 0 0 1000 vfit vviewparams -scale 6.66 -eye 48 43 -210 -at 50 45 -95 | ||||
Tags | No tags attached. | ||||
Test case number | bugs vis bug27836 | ||||
|
Branch CR27836 has been created by kgv. SHA-1: 54b88f6f77aabd087e86dcfb4b09e6479f3c8799 Detailed log of new commits: Author: kgv Date: Sat Sep 3 21:37:55 2016 +0300 0027836: Visualization, TKOpenGl - gradient background is lost at some camera positions |
|
Patch is ready for review. |
|
Branch CR27836 has been updated forcibly by kgv. SHA-1: 6994b6a9c83822a25dc383773ba4eefabb381d25 |
|
Branch CR27836 reviewed without remarks, ready for testing. |
|
Dear BugMaster, Branch CR27836 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested. SHA-1: 6994b6a9c83822a25dc383773ba4eefabb381d25 Number of compiler warnings: occt component: Linux: 0 (0 on master) Windows: 0 (0 on master) MasOS: 0 (0 on master) products component: Linux: 64 Windows: 0 MacOS: 1156 Regressions/Differences: Not detected Testing cases: bugs vis bug27836 - OK http://occt-tests/CR27836-master-OCCT/Debian70-64/bugs/vis/bug27836.html http://occt-tests/CR27836-master-OCCT/Windows-64-VC10/bugs/vis/bug27836.html Testing on Linux: Total MEMORY difference: 90097894 / 89470772 [+0.70%] Total CPU difference: 19395.459999999995 / 19241.020000000015 [+0.80%] Testing on Windows: Total MEMORY difference: 57137067 / 57155154 [-0.03%] Total CPU difference: 17981.408464698787 / 18057.115749998855 [-0.42%] There are differences in images found by testdiff: http://occt-tests/CR27836-master-OCCT/Windows-64-VC10/diff-Windows-64-VC10-image.html v3d raytrace bug25201 |
|
Dear Kirill, Branch CR27836 has been rejected due to: - differences in images |
|
Branch CR27836 has been updated by kgv. SHA-1: 5dfeca23d83933acfc41ef8506a17e71ee910593 Detailed log of new commits: Author: kgv Date: Tue Sep 6 16:55:13 2016 +0300 Graphic3d_TransformPers::Compute() - exclude projection matrix in computations to eliminate floating point computation error. |
|
Branch CR27836_1 has been created by kgv. SHA-1: 46aed8537ff459c6860c7fc4f23f0ccfc38b99f9 Detailed log of new commits: Author: kgv Date: Sat Sep 3 21:37:55 2016 +0300 0027836: Visualization, TKOpenGl - gradient background is lost at some camera positions Graphic3d_TransformPers::Compute() - projection matrix has been excluded from the math to eliminate floating point computation error. |
|
Branch CR27836_1 has been updated forcibly by kgv. SHA-1: 7ec52328e62861b9316a01f7d3924473f75a8a71 |
|
Patch test updated patch in branch CR27836_1. |
|
Dear BugMaster, Branch CR27836_1 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested. SHA-1: 7ec52328e62861b9316a01f7d3924473f75a8a71 Number of compiler warnings: occt component: Linux: 0 (0 on master) Windows: 0 (0 on master) MasOS: 0 (0 on master) products component: Linux: 64 Windows: 0 MacOS: 1139 Regressions/Differences: Not detected Testing cases: bugs vis bug27836 - OK http://occt-tests/CR27836_1-master-OCCT/Debian70-64/bugs/vis/bug27836.html http://occt-tests/CR27836_1-master-OCCT/Windows-64-VC10/bugs/vis/bug27836.html Testing on Linux: Total MEMORY difference: 89782624 / 89474832 [+0.34%] Total CPU difference: 19449.290000000037 / 19241.180000000015 [+1.08%] Testing on Windows: Total MEMORY difference: 57139930 / 57155154 [-0.03%] Total CPU difference: 17999.3641797989 / 18057.115749998855 [-0.32%] |
|
Branch CR27836 has been deleted by kgv. SHA-1: 5dfeca23d83933acfc41ef8506a17e71ee910593 |
|
Branch CR27836_1 has been deleted by kgv. SHA-1: 7ec52328e62861b9316a01f7d3924473f75a8a71 |
occt: master 71d8ccc7 2016-09-03 18:37:55 Committer: bugmaster Details Diff |
0027836: Visualization, TKOpenGl - gradient background is lost at some camera positions OpenGl_View::ZLayerBoundingBox() now adds screen background plane for proper Z-fit. Graphic3d_TransformPers::Compute() - projection matrix has been excluded from the math to eliminate floating point computation error. |
Affected Issues 0027836 |
|
mod - src/Graphic3d/Graphic3d_TransformPers.hxx | Diff File | ||
mod - src/OpenGl/OpenGl_View.cxx | Diff File | ||
add - tests/bugs/vis/bug27836 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2016-09-03 21:04 | kgv | New Issue | |
2016-09-03 21:04 | kgv | Assigned To | => kgv |
2016-09-03 21:06 | kgv | Relationship added | child of 0022582 |
2016-09-03 21:39 | git | Note Added: 0057446 | |
2016-09-03 21:40 | kgv | Note Added: 0057447 | |
2016-09-03 21:40 | kgv | Assigned To | kgv => san |
2016-09-03 21:40 | kgv | Severity | minor => trivial |
2016-09-03 21:40 | kgv | Status | new => resolved |
2016-09-03 21:40 | kgv | Product Version | => 7.1.0 |
2016-09-05 16:11 | git | Note Added: 0057465 | |
2016-09-05 16:13 |
|
Note Added: 0057466 | |
2016-09-05 16:13 |
|
Assigned To | san => bugmaster |
2016-09-05 16:13 |
|
Status | resolved => reviewed |
2016-09-05 16:20 |
|
Assigned To | bugmaster => apv |
2016-09-05 17:03 |
|
Test case number | => bugs vis bug27836 |
2016-09-06 14:52 |
|
Note Added: 0057517 | |
2016-09-06 14:52 |
|
Assigned To | apv => kgv |
2016-09-06 14:52 |
|
Status | reviewed => assigned |
2016-09-06 14:54 |
|
Note Added: 0057518 | |
2016-09-06 16:53 | git | Note Added: 0057523 | |
2016-09-06 16:57 | git | Note Added: 0057524 | |
2016-09-06 16:59 | git | Note Added: 0057525 | |
2016-09-06 16:59 | kgv | Note Added: 0057526 | |
2016-09-06 16:59 | kgv | Assigned To | kgv => bugmaster |
2016-09-06 16:59 | kgv | Status | assigned => resolved |
2016-09-06 16:59 | kgv | Status | resolved => reviewed |
2016-09-06 17:04 |
|
Assigned To | bugmaster => apv |
2016-09-07 15:54 |
|
Note Added: 0057571 | |
2016-09-07 15:54 |
|
Assigned To | apv => bugmaster |
2016-09-07 15:54 |
|
Status | reviewed => tested |
2016-09-09 09:40 | bugmaster | Changeset attached | => occt master 71d8ccc7 |
2016-09-09 09:40 | bugmaster | Status | tested => verified |
2016-09-09 09:40 | bugmaster | Resolution | open => fixed |
2016-09-10 14:34 | kgv | Relationship added | related to 0027860 |
2016-10-28 21:48 | git | Note Added: 0059579 | |
2016-10-28 21:48 | git | Note Added: 0059580 | |
2016-12-09 16:30 |
|
Status | verified => closed |
2016-12-09 16:39 |
|
Fixed in Version | => 7.1.0 |